# MacFleet

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  Makefile  README.md  TODOS.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: allreduce_bench.py  bandwidth_test.py
cli/: main.py
docs/designs/: v3-cathedral.md
docs/getting-started/: quickstart.md
docs/reference/: security.md
examples/: train_custom.py  train_gpt2.py  train_resnet.py
macfleet/: __init__.py
macfleet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
macfleet/cli/: __init__.py  config_loader.py  main.py
macfleet/comm/: __init__.py  collectives.py  discovery.py  grpc_service.py  protocol.py  transport.py
macfleet/compression/: __init__.py  adaptive.py  pipeline.py  quantize.py  topk.py
macfleet/compute/: __init__.py  dispatch.py  models.py  worker.py
macfleet/core/: __init__.py  config.py  coordinator.py  node.py  worker.py
macfleet/engines/: __init__.py  base.py  mlx_engine.py  serialization.py  torch_engine.py
macfleet/monitoring/: __init__.py  agent_adapter.py  dashboard.py  health.py  thermal.py  throughput.py
macfleet/pool/: agent.py  network.py  registry.py  scheduler.py
macfleet/sdk/: __init__.py  pool.py  train.py
macfleet/security/: __init__.py  auth.py  bootstrap.py
macfleet/training/: __init__.py  checkpoint.py  data_parallel.py  distributed_sampler.py  sampler.py  trainer.py
macfleet/utils/: __init__.py  atomic_write.py  network.py  tensor_utils.py
tests/: __init__.py  conftest.py  test_collectives.py  test_compression.py  test_config_validation.py  test_distributed_loopback.py  test_sampler.py  test_thermal_weight.py  test_thread_safety.py  test_transport.py
tests/test_comm/: test_protocol.py
tests/test_compression/: test_adaptive.py
tests/test_compute/: test_dispatch.py  test_models.py  test_pool_compute.py  (+1 more)
(+21 files in other folders)
